{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 17,
  "lineage": "b6081cef-ecb4-1cbd-ba5f-0576b45fc32b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "managementnet-allow-http-ssh-rdp-icmp",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-06-14T01:57:05.989-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/qwiklabs-gcp-03-d2c1cf80cb27/global/firewalls/managementnet-allow-http-ssh-rdp-icmp",
            "name": "managementnet-allow-http-ssh-rdp-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/global/networks/managementnet",
            "priority": 1000,
            "project": "qwiklabs-gcp-03-d2c1cf80cb27",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/global/firewalls/managementnet-allow-http-ssh-rdp-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.managementnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mynetwork_allow_http_ssh_rdp_icmp",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-06-14T02:05:58.419-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/qwiklabs-gcp-03-d2c1cf80cb27/global/firewalls/mynetwork-allow-http-ssh-rdp-icmp",
            "name": "mynetwork-allow-http-ssh-rdp-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/global/networks/mynetwork",
            "priority": 1000,
            "project": "qwiklabs-gcp-03-d2c1cf80cb27",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/global/firewalls/mynetwork-allow-http-ssh-rdp-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.mynetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "privatenet-allow-http-ssh-rdp-icmp",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-06-14T02:01:45.766-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/qwiklabs-gcp-03-d2c1cf80cb27/global/firewalls/privatenet-allow-http-ssh-rdp-icmp",
            "name": "privatenet-allow-http-ssh-rdp-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/global/networks/privatenet",
            "priority": 1000,
            "project": "qwiklabs-gcp-03-d2c1cf80cb27",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/global/firewalls/privatenet-allow-http-ssh-rdp-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.privatenet"
          ]
        }
      ]
    },
    {
      "module": "module.mynet-eu-vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200521",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/zones/europe-west1-d/disks/mynet-eu-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-03-d2c1cf80cb27/zones/europe-west1-d/instances/mynet-eu-vm",
            "instance_id": "897827408886388376",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "UV0aeHDiLPY=",
            "name": "mynet-eu-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.205.75.77",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/global/networks/mynetwork",
                "network_ip": "10.132.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/regions/europe-west1/subnetworks/mynetwork",
                "subnetwork_project": "qwiklabs-gcp-03-d2c1cf80cb27"
              }
            ],
            "project": "qwiklabs-gcp-03-d2c1cf80cb27",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/zones/europe-west1-d/instances/mynet-eu-vm",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west1-d"
          },
          "dependencies": [
            "google_compute_network.mynetwork"
          ]
        }
      ]
    },
    {
      "module": "module.privatenet-us-vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200521",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/zones/us-central1-a/disks/privatenet-us-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-03-d2c1cf80cb27/zones/us-central1-a/instances/privatenet-us-vm",
            "instance_id": "7557187605927319924",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "UV0aeHDiLPY=",
            "name": "privatenet-us-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.239.176.153",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/global/networks/privatenet",
                "network_ip": "172.16.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/regions/us-central1/subnetworks/privatesubnet-us",
                "subnetwork_project": "qwiklabs-gcp-03-d2c1cf80cb27"
              }
            ],
            "project": "qwiklabs-gcp-03-d2c1cf80cb27",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/zones/us-central1-a/instances/privatenet-us-vm",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.privatenet",
            "google_compute_subnetwork.privatesubnet-us"
          ]
        }
      ]
    },
    {
      "module": "module.managementnet-us-vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200521",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/zones/us-central1-a/disks/managementnet-us-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-03-d2c1cf80cb27/zones/us-central1-a/instances/managementnet-us-vm",
            "instance_id": "9190748124556581014",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "UV0aeHDiLPY=",
            "name": "managementnet-us-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.154.194.143",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/global/networks/managementnet",
                "network_ip": "10.130.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/regions/us-central1/subnetworks/managementsubnet-us",
                "subnetwork_project": "qwiklabs-gcp-03-d2c1cf80cb27"
              }
            ],
            "project": "qwiklabs-gcp-03-d2c1cf80cb27",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/zones/us-central1-a/instances/managementnet-us-vm",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.managementnet",
            "google_compute_subnetwork.managementsubnet-us"
          ]
        }
      ]
    },
    {
      "module": "module.mynet-us-vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200521",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/zones/us-central1-a/disks/mynet-us-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-03-d2c1cf80cb27/zones/us-central1-a/instances/mynet-us-vm",
            "instance_id": "6036359207040079512",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "UV0aeHDiLPY=",
            "name": "mynet-us-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.223.235.244",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/global/networks/mynetwork",
                "network_ip": "10.128.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/regions/us-central1/subnetworks/mynetwork",
                "subnetwork_project": "qwiklabs-gcp-03-d2c1cf80cb27"
              }
            ],
            "project": "qwiklabs-gcp-03-d2c1cf80cb27",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/zones/us-central1-a/instances/mynet-us-vm",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.mynetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "managementnet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/qwiklabs-gcp-03-d2c1cf80cb27/global/networks/managementnet",
            "name": "managementnet",
            "project": "qwiklabs-gcp-03-d2c1cf80cb27",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/global/networks/managementnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "mynetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/qwiklabs-gcp-03-d2c1cf80cb27/global/networks/mynetwork",
            "name": "mynetwork",
            "project": "qwiklabs-gcp-03-d2c1cf80cb27",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/global/networks/mynetwork"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "privatenet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/qwiklabs-gcp-03-d2c1cf80cb27/global/networks/privatenet",
            "name": "privatenet",
            "project": "qwiklabs-gcp-03-d2c1cf80cb27",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/global/networks/privatenet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "managementsubnet-us",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-06-14T01:57:06.207-07:00",
            "gateway_address": "10.130.0.1",
            "id": "projects/qwiklabs-gcp-03-d2c1cf80cb27/regions/us-central1/subnetworks/managementsubnet-us",
            "ip_cidr_range": "10.130.0.0/20",
            "name": "managementsubnet-us",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/global/networks/managementnet",
            "private_ip_google_access": false,
            "project": "qwiklabs-gcp-03-d2c1cf80cb27",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/regions/us-central1/subnetworks/managementsubnet-us"
          },
          "dependencies": [
            "google_compute_network.managementnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "privatesubnet-eu",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-06-14T02:01:46.035-07:00",
            "gateway_address": "172.20.0.1",
            "id": "projects/qwiklabs-gcp-03-d2c1cf80cb27/regions/europe-west1/subnetworks/privatesubnet-eu",
            "ip_cidr_range": "172.20.0.0/24",
            "name": "privatesubnet-eu",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/global/networks/privatenet",
            "private_ip_google_access": false,
            "project": "qwiklabs-gcp-03-d2c1cf80cb27",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/regions/europe-west1/subnetworks/privatesubnet-eu"
          },
          "dependencies": [
            "google_compute_network.privatenet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "privatesubnet-us",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-06-14T02:01:45.975-07:00",
            "gateway_address": "172.16.0.1",
            "id": "projects/qwiklabs-gcp-03-d2c1cf80cb27/regions/us-central1/subnetworks/privatesubnet-us",
            "ip_cidr_range": "172.16.0.0/24",
            "name": "privatesubnet-us",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/global/networks/privatenet",
            "private_ip_google_access": false,
            "project": "qwiklabs-gcp-03-d2c1cf80cb27",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-d2c1cf80cb27/regions/us-central1/subnetworks/privatesubnet-us"
          },
          "dependencies": [
            "google_compute_network.privatenet"
          ]
        }
      ]
    }
  ]
}